[tool.poetry]
name = "endura_quant_data"
version = "0.0.0"
description = "Quant_Data"
authors = ["Yan Zhang <jenzhang688@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/Endura2024/quant_data"
repository = "https://github.com/Endura2024/quant_data"
documentation = "https://quant_data.readthedocs.io"
packages = [
    { include = "quant_data_util", from = "src" },
]
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/Endura2024/quant_data/releases"

[tool.poetry.dependencies]
python = "^3.11"
click = ">=8.0.1"
pandas = "^2.2.2"

[tool.poetry.dev-dependencies]
Pygments = ">=2.17.0"
black = ">=24.0.0"
coverage = {extras = ["toml"], version = ">=7.2"}
darglint = ">=1.8.1"
flake8 = ">=7.0.0"
flake8-bandit = ">=4.0.0"
flake8-bugbear = ">=24.0.0"
flake8-docstrings = ">=1.7.0"
flake8-rst-docstrings = ">=0.3.0"
furo = ">=2023.3.23"
isort = ">=5.12.0"
mypy = ">=1.3.0"
pep8-naming = ">=0.14.0"
pre-commit = ">=3.8.0"
pre-commit-hooks = ">=4.6.0"
pytest = ">=8.0.0"
pyupgrade = ">=2.35.0"
safety = ">=2.0.0"
sphinx = ">=8.0.0"
sphinx-autobuild = ">=2024.4.16"
sphinx-click = ">=6.0.0"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=1.2.0"}
myst-parser = {version = ">=4.0.0"}

[tool.poetry.scripts]
quant_data = "quant_data_util.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["quant_data_util", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
